# xiloader

./: CMakeLists.txt  CMakeSettings.json  LICENSE
cmake/: CPM.cmake  argparse.cmake  detours.cmake
src/: console(x360).cpp  console.h  defines(x360).h  ffxi.h  ffximain(x360).h  functions(x360).h  functions.cpp  helpers(x360).h  main(x360).cpp  main.cpp  network.cpp  network.h  polcore(x360).h
